# conRecognition

./: .gitignore  README.md  augmentation.ipynb  main.ipynb  pyproject.toml  scraping.py
coin/one/: 000002.txt  000005.txt  000056.txt  classes.txt
coin/one/rotated/: 000002_rot90.txt  000005_rot90.txt  000056_rot90.txt
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
