[project]
name = "coinrecognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Nanahoshi74",email = "yukitakegl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.3.83,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "icrawler (>=0.6.10,<0.7.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "albumentations (>=2.0.5,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
